--- a/package.json
+++ b/package.json
@@ -20,8 +20,8 @@
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
     "react-scroll": "^1.8.9",
-    "react-typed": "^1.2.0",
     "sass": "^1.59.3",
+    "typed.js": "^2.0.16",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
